# MIPS-Optimizer

./: Analysis.hs  Lexer.x  Main.hs  Makefile  Parser.hs  Parser.y  README  Test.hs  check  mips-pipeline.cabal  pipeline
src/: Pipeline.hs
tests/: ParserTests.hs  Test.hs
