name:                mips-pipeline
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Alex Miller
maintainer:          millerdevel@gmail.com
build-type:          Simple
cabal-version:       >=1.8

executable pipeline
  main-is:             Main.hs
  build-depends:       base ==4.3.*, parsec ==3.1.*, containers ==0.4.*, haskell98 ==1.1.*, array ==0.3.*

executable check
  main-is: Test.hs
  build-depends: base ==4.3.*, haskell98 ==1.1.*, HTF ==0.10.*, parsec ==3.1.*
