name:                mips-pipeline
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Alex Miller
maintainer:          millerdevel@gmail.com
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules: Parser, Analysis
  build-depends:       base ==4.3.*, parsec ==3.1.*, containers ==0.4.*, haskell98 ==1.1.*, array ==0.3.*
  hs-source-dirs: lib

executable pipeline
  main-is:             Pipeline.hs
  build-depends:       base ==4.3.*, parsec ==3.1.*, containers ==0.4.*, haskell98 ==1.1.*, array ==0.3.*, mips-pipeline
  hs-source-dirs: src

test-suite check
  main-is: Test.hs
  type: exitcode-stdio-1.0
  build-depends: base ==4.3.*, haskell98 ==1.1.*, HTF ==0.10.*, parsec ==3.1.*, mips-pipeline
  hs-source-dirs: tests
